fixed hero img on tablet

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -23,7 +23,7 @@
 /* HERO */
 
 .hero {
-    padding-top: 200px;
+    padding-top: 100px;
     justify-content: space-evenly;
 }
 
