--- a/styles/global.css
+++ b/styles/global.css
@@ -18,7 +18,6 @@ body, html {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    overflow-x: hidden;
 }
 
 .btn {
